deploy/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - conversion-guide.ltc.bcit.ca
      secretName: star-ltc-bcit-ca
  rules:
    - host: conversion-guide.ltc.bcit.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service
                port:
                  number: 80
